[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/buttonZup.png" type="Texture" id=1]
[ext_resource path="res://Sprites/buttonZdown.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=3]
[ext_resource path="res://Sounds/buttonPress.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sounds/buttonRelease.ogg" type="AudioStream" id=5]

[node name="Button" type="TextureButton"]
margin_right = 129.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.63
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )

[node name="ButtonDownSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -14.0

[node name="ButtonUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
[connection signal="button_down" from="." to="." method="_on_Button_button_down"]
[connection signal="button_up" from="." to="." method="_on_Button_button_up"]
